@@ -225,7 +225,7 @@ def test_constraint_driven_addingInfo():
     ...                      'TestMenu')
 
     >>> defineMenuItem(TestMenu, IAdding, '', 'item1')
-    >>> defineMenuItem(TestMenu, IAdding, '', 'item2')
+    >>> defineMenuItem(TestMenu, IAdding, '', 'Item2')
 
     >>> defineMenuItem(AddMenu, IAdding, '', 'item3', extra={'factory': 'f1'})
     >>> defineMenuItem(AddMenu, IAdding, '', 'item4', extra={'factory': 'f2'})
@@ -272,8 +272,8 @@ def test_constraint_driven_addingInfo():
     3
     >>> items[0]['title']
     u'item1'
-    >>> items[1]['title']
-    u'item2'
+    >>> items[1]['title'] # the collator ordered this one correctly!
+    u'Item2'
     >>> items[2]['title']
     u'item3'
     """
